--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
+    "@types/pg": "^8.11.11",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
@@ -47,6 +48,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
+    "pg": "^8.14.1",
+    "pm": "^2.2.6",
     "twilio": "^5.4.3",
     "winston": "^3.17.0",
     "winston-mongodb": "^6.0.0",
